src/main/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-quarkus
  namespace: user2-project
spec:
  selector:
    matchLabels:
      app: todo-api-quarkus
  replicas: 3
  spec.paused: true
  spec.template.spec.serviceAccountName: todo-api-quarkus
  template:
    metadata:
      labels:
        app: todo-api-quarkus
    spec:
      containers:
        - name: todo-api-quarkus
          image: todo-api-quarkus
          ports:
            - containerPort: 8080
              name: http
              Protocol: TCP
